feat: CheckListWithOperationDateDTO added.